# bartender

./: .editorconfig  README.md  bartender.cabal  docker-run.sh  stack.yaml
src/: Existential.hs  Main.hs  encapsulation.hs
