name:                bartender
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/toy-robot#readme
license:             BSD3
license-file:        LICENSE
author:              Djoe Pramono
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable toy-robot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
